# fsr2-rs

./: .gitmodules  Cargo.toml  README.md
fsr2-sys/: Cargo.toml  build.rs
fsr2-sys/src/: error.rs  interface.rs  lib.rs  types.rs
fsr2-sys/src/backend/: mod.rs  vk.rs
