[package]
name = "fsr2-sys"
version = "0.1.0"
edition = "2021"
authors = ["NotAPenguin"]
description = "Unsafe FFI bindings for AMD's FidelityFX Super Resolution 2 library (FSR2)"
keywords = ["ffi", "fsr2", "graphics"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/NotAPenguin0/fsr2-rs"
repository = "https://github.com/grovesNL/fsr2-rs"
readme = "../README.md"

[dependencies]
bitflags = "2.3.1"
widestring = "1.0.2"

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"

[features]
default = ["vk"]
vk = []
dx12 = []